If you can't make it good, at least make it cute.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hi there - Welcome to my portfolio!
+<!doctype html>
+
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Stay rad &#x1F918;</title>
+  </head>
+  <body>
+    <h1>Hi there!</h1>
+    <p>
+      I'm a blank canvas just waiting to be turned into an awesome data science
+      portfolio. Please check back soon!
+    </p>
+  </body>
+</html>
