adding resume and link

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 								<li><a href="https://github.com/ctnormand1" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="https://www.linkedin.com/in/cnormand/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://medium.com/@ctnormand1" target="_blank" class="icon brands fa-medium-m"><span class="label">medium</span></a></li>
+								<li><a href="https://ctnormand1.github.io/resume.pdf" target="_blank" class="button2" style="width: 150px"><i class="far fa-file-pdf"></i> Resume</a></li>
 							</ul>
 						</div>
 					</div>
