--- a/index.html
+++ b/index.html
@@ -49,11 +49,49 @@
 			</article>
 
 		<!-- Work -->
+
+
+
 			<article id="work" class="wrapper style2">
 				<div class="container">
 					<header>
 						<h2>Recent Projects</h2>
 					</header>
+
+					<div class="row aln-center">
+						<div class="col-12 col-12-medium col-12-small">
+							<section class="box style1">
+								<table>
+									<tr valign="top">
+										<td style="text-align: left">
+											<h3>Image Classification with Active Learning</h3>
+											<p>
+												In this project, I explore active learning as a strategy
+												to reduce the amount of data required to train a
+												convolutional neural network for image classification.
+												This has many real-world applications - specifically
+												for projects where data needs to be collected and
+												annotated. Active learning leads to time savings and
+												cost reduction in the annotation phase, and ultimately
+												ensures you're getting the most value from your data.
+											</p>
+											<p>
+												This is a work in progress - expect to see updates in
+												the coming weeks!
+											</p>
+											<a href="https://github.com/ctnormand1/active_learning_demonstration" target="_blank" class="button scrolly">
+												View on GitHub
+											</a>
+										</td>
+										<td>
+											<span><img src="images/metal_network.jpg" alt="neowork"/></span>
+										</td>
+									</tr>
+								</table>
+							</section>
+						</div>
+
+
 					<div class="row aln-center">
 						<div class="col-12 col-12-medium col-12-small">
 							<section class="box style1">
@@ -82,6 +120,7 @@
 								</table>
 							</section>
 						</div>
+
 
 						<div class="row aln-center">
 							<div class="col-12 col-12-medium col-12-small">
