--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 				<ul class="container">
 					<li><a href="#top">Home</a></li>
 					<li><a href="#work">Recent Projects</a></li>
-					<li><a href="#portfolio">About Me</a></li>
+					<li><a href="#about">About Me</a></li>
+					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
 
@@ -157,7 +158,7 @@
 			</article>
 
 		<!-- Portfolio -->
-			<article id="portfolio" class="wrapper style3">
+			<article id="about" class="wrapper style3">
 				<div class="container">
 					<header>
 						<h2>About Me</h2>
@@ -197,12 +198,45 @@
 
 		<!-- Contact -->
 			<article id="contact" class="wrapper style4">
+				<div class="container medium">
+					<header>
+						<h2>Get in touch!</h2>
+						<p>Send me a message using the form below, and I'll get back to you
+						shortly.</p>
+					</header>
+					<div class="row">
+						<div class="col-12">
+							<form method="POST" action="https://formspree.io/f/mqkwwrpa">
+								<div class="row">
+									<div class="col-6 col-12-small">
+										<input type="text" name="name" id="name" placeholder="Name" />
+									</div>
+									<div class="col-6 col-12-small">
+										<input type="text" name="email" id="email" placeholder="Email" />
+									</div>
+									<div class="col-12">
+										<input type="text" name="subject" id="subject" placeholder="Subject" />
+									</div>
+									<div class="col-12">
+										<textarea name="message" id="message" placeholder="Message"></textarea>
+									</div>
+									<div class="col-12">
+										<ul class="actions">
+											<li><input type="submit" value="Send Message" class="alt"/></li>
+											<li><input type="reset" value="Clear Form" class="alt"/></li>
+										</ul>
+									</div>
+								</div>
+							</form>
+						</div>
+					</div>
+
 					<footer>
 						<ul id="copyright">
 							<li>&copy; 2021 Christian Normand</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
-				</div>
+
 			</article>
 
 		<!-- Scripts -->
