making buttons a little better

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<li><a href="#top">Home</a></li>
 					<li><a href="#work">Recent Projects</a></li>
 					<li><a href="#about">About Me</a></li>
-					<li><a href="#contact">Contact</a></li>
+					<!-- <li><a href="#contact">Contact</a></li> -->
 				</ul>
 			</nav>
 
@@ -66,6 +66,8 @@
 									<tr valign="top">
 										<td style="text-align: left">
 											<h3>Image Classification with Active Learning</h3>
+
+
 											<p>
 												In this project, I explore active learning as a strategy
 												to reduce the amount of data required to train a
@@ -80,12 +82,13 @@
 												This is a work in progress - expect to see updates in
 												the coming weeks!
 											</p>
-											<a href="https://github.com/ctnormand1/active_learning_demonstration" target="_blank" class="button scrolly">
+											<a href="https://github.com/ctnormand1/active_learning_demonstration" target="_blank" class="button3">
 												View on GitHub
 											</a>
+
 										</td>
 										<td>
-											<span><img src="images/metal_network.jpg" alt="neowork"/></span>
+											<span><img src="images/metal_network.jpg" alt="network" class="image.fit"/></span>
 										</td>
 									</tr>
 								</table>
@@ -110,7 +113,7 @@
 												11 school districts that would be a good starting point for
 												organizations working towards equity in higher education.
 											</p>
-											<a href="https://github.com/ctnormand1/standardized_test_analysis" target="_blank" class="button scrolly">
+											<a href="https://github.com/ctnormand1/standardized_test_analysis" target="_blank" class="button3">
 												View on GitHub
 											</a>
 										</td>
@@ -143,7 +146,7 @@
 													harassment metrics.
 
 												</p>
-												<a href="https://github.com/ctnormand1/cyber_bullying_detection" target="_blank" class="button scrolly">
+												<a href="https://github.com/ctnormand1/cyber_bullying_detection" target="_blank" class="button3">
 													View on GitHub
 												</a>
 											</td>
