--- a/index.html
+++ b/index.html
@@ -60,104 +60,93 @@
 					</header>
 
 					<div class="row aln-center">
+
 						<div class="col-12 col-12-medium col-12-small">
 							<section class="box style1">
-								<table>
-									<tr valign="top">
-										<td style="text-align: left">
-											<h3>Image Classification with Active Learning</h3>
+								<div class="row">
+									<div class="col-4 col-4-large col-4-medium col-12-small">
+										<span class="image fit"><img src="images/metal_network.jpg" alt="network" /></span>
+									</div>
+									<div class="col-8 col-8-large col-8-medium col-12-small" style="text-align: left;">
+										<h3>Image Classification with Active Learning</h3>
 
-
-											<p>
-												In this project, I explore active learning as a strategy
-												to reduce the amount of data required to train a
-												convolutional neural network for image classification.
-												This has many real-world applications - specifically
-												for projects where data needs to be collected and
-												annotated. Active learning leads to time savings and
-												cost reduction in the annotation phase, and ultimately
-												ensures you're getting the most value from your data.
-											</p>
-											<p>
-												This is a work in progress - expect to see updates in
-												the coming weeks!
-											</p>
-											<a href="https://github.com/ctnormand1/active_learning_demonstration" target="_blank" class="button3">
-												View on GitHub
-											</a>
-
-										</td>
-										<td>
-											<span><img src="images/metal_network.jpg" alt="network" class="image.fit"/></span>
-										</td>
-									</tr>
-								</table>
+										<p>
+											In this project, I explore active learning as a strategy
+											to reduce the amount of data required to train a
+											convolutional neural network for image classification.
+											This has many real-world applications - specifically
+											for projects where data needs to be collected and
+											annotated. Active learning leads to time savings and
+											cost reduction in the annotation phase, and ultimately
+											ensures you're getting the most value from your data.
+										</p>
+										<p>
+											This is a work in progress - expect to see updates in
+											the coming weeks!
+										</p>
+										<a href="https://github.com/ctnormand1/active_learning_demonstration" target="_blank" class="button3">
+											View on GitHub
+										</a>
+									</div>
+								</div>
 							</section>
 						</div>
 
-
-					<div class="row aln-center">
 						<div class="col-12 col-12-medium col-12-small">
 							<section class="box style1">
-								<table>
-									<tr valign="top">
-										<td style="text-align: left">
-											<h3>Underrepresentation in Higher Ed</h3>
-											<p>
-												In this analysis project, I explore underrepresentation
-												at California universities through SAT and ACT participation
-												rates. I used data from the California Department of Education
-												to determine which school districts served the largest
-												proportion of students from underrepresented minority
-												groups. I then pulled in exam participation rates to identify
-												11 school districts that would be a good starting point for
-												organizations working towards equity in higher education.
-											</p>
-											<a href="https://github.com/ctnormand1/standardized_test_analysis" target="_blank" class="button3">
-												View on GitHub
-											</a>
-										</td>
-										<td>
-											<span><img src="images/books.jpg" alt="books"/></span>
-										</td>
-									</tr>
-								</table>
+								<div class="row">
+									<div class="col-4 col-4-large col-4-medium col-12-small">
+										<span class="image fit"><img src="images/books.jpg" alt="books" /></span>
+									</div>
+									<div class="col-8 col-8-large col-8-medium col-12-small" style="text-align: left;">
+										<h3>Underrepresentation in Higher Ed</h3>
+										<p>
+											In this analysis project, I explore underrepresentation
+											at California universities through SAT and ACT participation
+											rates. I used data from the California Department of Education
+											to determine which school districts served the largest
+											proportion of students from underrepresented minority
+											groups. I then pulled in exam participation rates to identify
+											11 school districts that would be a good starting point for
+											organizations working towards equity in higher education.
+										</p>
+										<a href="https://github.com/ctnormand1/standardized_test_analysis" target="_blank" class="button3">
+											View on GitHub
+										</a>
+									</div>
+								</div>
 							</section>
 						</div>
 
+						<div class="col-12 col-12-medium col-12-small">
+							<section class="box style1">
+								<div class="row">
+									<div class="col-4 col-4-large col-4-medium col-12-small">
+										<span class="image fit"><img src="images/cyber_bullying.jpg" alt="cyberbullying" /></span>
+									</div>
+									<div class="col-8 col-8-large col-8-medium col-12-small" style="text-align: left;">
+										<h3>Cyberbullying Detection</h3>
+										<p>
+											Can machine learning be used to detect cyberbulling
+											in online comments? I worked as part of
+											a small data science team to answer this question using
+											natural language processing (NLP) techniques. We
+											compared logistic regression, naive Bayes, support
+											vector classifier, and XGBoost models on their
+											accuracy detecting harassment in comments
+											from Wikipedia articles. XGBoost achieved the highest
+											accuracy, averaging 91.6 percent across our three
+											harassment metrics.
+										</p>
+										<a href="https://github.com/ctnormand1/cyberbullying_detection" target="_blank" class="button3">
+											View on GitHub
+										</a>
+									</div>
+								</div>
+							</section>
+						</div>
 
-						<div class="row aln-center">
-							<div class="col-12 col-12-medium col-12-small">
-								<section class="box style1">
-									<table>
-										<tr valign="top">
-											<td style="text-align: left">
-												<h3>Cyberbullying Detection</h3>
-												<p>
-													Can machine learning be used to detect cyberbulling
-													in online comments? I worked as part of
-													a small data science team to answer this question using
-													natural language processing (NLP) techniques. We
-													compared logistic regression, naive Bayes, support
-													vector classifier, and XGBoost models on their
-													accuracy detecting harassment in comments
-													from Wikipedia articles. XGBoost achieved the highest
-													accuracy, averaging 91.6 percent across our three
-													harassment metrics.
-
-												</p>
-												<a href="https://github.com/ctnormand1/cyber_bullying_detection" target="_blank" class="button3">
-													View on GitHub
-												</a>
-											</td>
-
-											<td>
-												<span><img src="images/cyber_bullying.jpg" alt="speech bubbles"/></span>
-											</td>
-										</tr>
-									</table>
-								</section>
-							</div>
+					</div>
 			</article>
 
 		<!-- Portfolio -->
