--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/profile_pic.jpg" alt="profile picture" /></span>
+							<span class="image fit"><img src="images/profile_pic.png" alt="profile picture" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
