added smartwatt project

--- a/index.html
+++ b/index.html
@@ -65,6 +65,55 @@
 							<section class="box style1">
 								<div class="row">
 									<div class="col-4 col-4-large col-4-medium col-12-small">
+										<span class="image fit"><img src="images/smartwatt.jpg" alt="network" /></span>
+									</div>
+									<div class="col-8 col-8-large col-8-medium col-12-small" style="text-align: left;">
+										<h3>SmartWatt Home Energy Monitor</h3>
+
+										<p>
+											Energy efficiency is a top concern for homeowners, so why
+											not build a system to monitor your home energy use in
+											real-time? Meet SmartWatt, an Arduino-powered energy
+											monitoring solution that delivers to-the-minute data and
+											historical trends through an online dashboard. In addition
+											to designing and building a Wi-Fi
+											enabled measurement device, I set up robust data
+											infrastructure using AWS services like IOT Core, DynamoDB,
+											and Lambda. I used Flask and Plotly Dash for the
+											dashboard application. All the tools I used
+											can be scaled for organizations with massive data
+											requirements, making this an incredibly valuable
+											skill-building project.
+										</p>
+										<p>
+											<strong>Want to check out the app?</strong><br>
+											Follow the link below and sign in with these credentials!
+											<br>
+											<strong>Username: </strong>guest<br>
+											<strong>Password: </strong>kilowatt
+										</p>
+										<ul class="actions">
+											<li>
+												<a href="https://smartwatt-dashboard.herokuapp.com" target="_blank" class="button3">
+													View the App
+												</a>
+											</li>
+											<li>
+												<a href="https://github.com/ctnormand1/home-energy-monitor" target="_blank" class="button3">
+													View on GitHub
+												</a>
+											</li>
+										</ul>
+
+									</div>
+								</div>
+							</section>
+						</div>
+
+						<div class="col-12 col-12-medium col-12-small">
+							<section class="box style1">
+								<div class="row">
+									<div class="col-4 col-4-large col-4-medium col-12-small">
 										<span class="image fit"><img src="images/metal_network.jpg" alt="network" /></span>
 									</div>
 									<div class="col-8 col-8-large col-8-medium col-12-small" style="text-align: left;">
@@ -79,10 +128,6 @@
 											annotated. Active learning leads to time savings and
 											cost reduction in the annotation phase, and ultimately
 											ensures you're getting the most value from your data.
-										</p>
-										<p>
-											This is a work in progress - expect to see updates in
-											the coming weeks!
 										</p>
 										<a href="https://github.com/ctnormand1/active_learning_demonstration" target="_blank" class="button3">
 											View on GitHub
