--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@
 										<h3>SmartWatt Home Energy Monitor</h3>
 
 										<p>
-											Energy efficiency is a top concern for homeowners, so why
-											not build a system to monitor your home energy use in
-											real-time? Meet SmartWatt, an Arduino-powered energy
+											SmartWatt is an Arduino-powered energy
 											monitoring solution that delivers to-the-minute data and
 											historical trends through an online dashboard. In addition
 											to designing and building a Wi-Fi
