Updates to personal bio

--- a/index.html
+++ b/index.html
@@ -202,14 +202,13 @@
 						<div class="col-12 col-12-medium col-12-small">
 							<section class="box style1">
 								<p style="text-align: left">
-									<strong>I love learning how things work.</strong> When I was a small child, I
+									<strong>I love learning how things work.</strong> When I was barely a toddler, I
 									would point at every technological contraption and demand to
-									know what it was and what made it function. My inquisitive
-									spirit has been a defining aspect of my life ever since.
+									know what it was and how it functioned. My inquisitive
+									spirit has been a driving force in my life ever since.
 								</p>
 								<p style="text-align: left">
-									I
-									studied mechanical engineering in college, but found myself
+									I studied mechanical engineering in college, but found myself
 									fascinated by data because of its ability to inform, generate
 									insights, and even lead to new discoveries. In 2021,
 									I completed a data science immersive course through General
